# rays

./: Cargo.toml  meson.build
src/: aabb.cc  aabb.hh  aabb.rs  bounding.rs  bvh.rs  camera.cc  camera.hh  camera.rs  colour.cc  colour.hh  colour.rs  dielectric.rs  hit.rs  hittable.cc  hittable.hh  hittable.rs  hittable_aabb.cc  hittable_aabb.hh  hittable_aarect.cc  hittable_aarect.hh  hittable_block.cc  hittable_block.hh  hittable_bvhnode.cc  hittable_bvhnode.hh  hittable_constantmedium.cc  hittable_constantmedium.hh  hittable_hitrecord.cc  hittable_hitrecord.hh  hittable_rotate.cc  hittable_rotate.hh  hittable_sphere.cc  hittable_sphere.hh  hittable_translate.cc  hittable_translate.hh  lambertian.rs  lib.cc  lib.hh  lib.rs  main.cc  main.rs  (+36 more)
src/bounding/: aabb.rs  bvh.rs
src/hit/: cuboid.rs  rect.rs  sphere.rs
src/hittable/: aabb.rs  aarect.rs  block.rs  bvhnode.rs  constantmedium.rs  hitrecord.rs  rotate.rs  sphere.rs  translate.rs
src/material/: dielectric.rs  diffuse_light.rs  diffuselight.rs  isotropic.rs  lambertian.rs  metal.rs
src/texture/: chequer.rs  chequered.rs  image.rs  noise.rs  perlin.rs  solid_colour.rs  solidcolour.rs
