[package]
name = "rays"
version = "0.1.0"
authors = ["Gareth Jones <gareth.k.jones@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1

[dependencies]
image = "0.23"
rand = "0.8"
